Change how JavaFX is initialized