@@ -174,6 +174,7 @@
             <argument>--add-opens=java.desktop/sun.awt=ALL-UNNAMED</argument>
             <argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
             <argument>--add-opens=java.base/java.time=ALL-UNNAMED</argument>
+            <argument>--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
             <argument>-Dorg.alice.ide.rootDirectory=../core/resources/target/distribution</argument>
             <argument>
               org.alice.stageide.EntryPoint
